Fixes minor typo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,6 @@
 import MainLayout from "@/layouts/MainLayout.astro";
 ---
 
-<MainLayout title="Start { } Breeze">
+<MainLayout title="Star { } Breeze">
 <!-- Begin your journey here... -->
 </MainLayout>
